--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,10 @@
     "googleapis": "^100.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "latest",
-    "nodemailer": "^6.7.5"
+    "nodemailer": "^6.7.5",
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^4.0.0",
+    "typescript": "^4.7.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -23,8 +26,6 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.21",
-    "@types/nodemailer": "^6.4.4",
-    "ts-node": "^10.7.0",
-    "tsconfig-paths": "^4.0.0"
+    "@types/nodemailer": "^6.4.4"
   }
 }
