--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "dev": "set NODE_ENV=dev && ts-node index.ts",
-    "start": "set NODE_ENV=production && ts-node index.ts"
+    "start": "set NODE_ENV=production && node --max-old-space-size=4096 -- node_modules/ts-node/dist/bin -P tsconfig.json index.ts"
   },
   "keywords": [],
   "dependencies": {
