heap memory crash fixed on the server side

--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,12 @@
   },
   "keywords": [],
   "dependencies": {
+    "compression": "^1.7.4",
     "cors": "latest",
     "dotenv": "^16.0.1",
     "express": "latest",
     "fs": "^0.0.1-security",
-    "googleapis": "^100.0.0",
+    "google-auth-library": "^8.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "latest",
     "nodemailer": "^6.7.5",
