--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -19,7 +19,7 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": [
+      "~server/*": [
         "./*"
       ],
       "@server/*": [
