--- a/server/package.json
+++ b/server/package.json
@@ -14,14 +14,14 @@
     "convict": "^6.2.3",
     "express": "latest",
     "compression": "^1.7.4",
-    "mongoose": "latest"
+    "mongoose": "latest",
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^4.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^17.0.21",
-    "ts-node": "^10.7.0",
-    "tsconfig-paths": "^4.0.0"
+    "@types/node": "^17.0.21"
   }
 }
