--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^3.0.1",
     "nuxt": "^2.13.3",
     "nuxt-i18n": "^6.28.0",
+    "secure-ls": "^1.2.6",
     "tsconfig-paths": "^4.0.0",
     "v-idle": "^0.2.1",
     "vue-class-component": "^7.2.6",
